layout shift fixed

--- a/css/book_detail.css
+++ b/css/book_detail.css
@@ -19,6 +19,7 @@
 #single_book_detail {
   display: flex;
   justify-content: center;
+  min-height: var(--height-lg) ;
 }
 
 .book_detail_card {
